--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -12,3 +12,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true
