--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -14,3 +14,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
+    - name: Audit
+      run: bundle exec ruby ./audit.rb
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
