--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,18 +1,5 @@
 name: Audit
 on: [ pull_request, push ]
-permissions:
-  actions: read
-  checks: read
-  contents: read
-  deployments: read
-  issues: read
-  discussions: read
-  packages: read
-  pages: read
-  pull-requests: read
-  repository-projects: read
-  security-events: read
-  statuses: read
 jobs:
   audit:
     runs-on: ubuntu-latest
@@ -30,4 +17,4 @@ jobs:
     - name: Audit
       run: bundle exec ruby ./audit.rb
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
